[package]
name = "udp-prober"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.6.0", features = ["derive"] }
crossbeam-channel = "0.5.15"
hex = "0.4.3"
mio = { version = "1.1.1", features = ["net", "os-poll"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
socket2 = "0.6.3"
time = { version = "0.3.44", features = ["formatting"] }

[dev-dependencies]
assert_cmd = "2.1.1"
tempfile = "3.23.0"
